added titles to story 2 genre tags

--- a/test.html
+++ b/test.html
@@ -86,9 +86,9 @@
 
 <div class="tags">
 <div class="genre_tags">
-<div class="romance_tag"> </div>
-<div class="com_tag"> </div>
-<div class="sol_tag"> </div>
+<div class="romance_tag" title="Shipping"> </div>
+<div class="com_tag" title="Comedy"> </div>
+<div class="sol_tag" title="Slice of Life"> </div>
 </div>
 <div class="char_tags">
 <div class="dash_tag" title="Rainbow Dash"> </div>
