Added an opacity fade on the 'hub'

--- a/test.html
+++ b/test.html
@@ -39,6 +39,7 @@
 <img class="header" src="http://www.fimfiction-static.net/images/story_images/21583_r.png?1334880241"/>
 </div>
 
+<div class="story_hud">
 <div class="tags">
 <div class="genre_tags">
 <div class="romance_tag" title="Shipping"> </div>
@@ -56,6 +57,7 @@
 <div class="author">by kits sjkafga jkfgsdfafhafgfkj</div>
 </div><!-- text container -->
 
+</div> <!-- story hud -->
 </div> <!-- story icon -->
 </div> <!-- story container -->
 
@@ -83,7 +85,7 @@
 <img class="header" src="http://www.fimfiction-static.net/images/story_images/40829_r.png?1343961764png"/>
 </div>
 
-
+<div class="story_hud">
 <div class="tags">
 <div class="genre_tags">
 <div class="romance_tag" title="Shipping"> </div>
@@ -104,6 +106,7 @@
 <div class="author">by kits</div>
 </div><!-- text container -->
 
+</div> <!-- story hud -->
 </div> <!-- story icon -->
 </div> <!-- story container -->
 
@@ -130,7 +133,7 @@
 <img class="header" src="http://www.fimfiction-static.net/images/story_images/38135.png?1346025772"/>
 </div>
 
-
+<div class="story_hud">
 <div class="tags">
 <div class="genre_tags">
 <div class="sol_tag" title="Slice of Life"> </div>
@@ -151,6 +154,7 @@
 <div class="author">by kits</div>
 </div><!-- text container -->
 
+</div> <!-- story hud -->
 </div> <!-- story icon -->
 </div> <!-- story container -->
 </div>
